--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
     </plugins>
   </build>
   <dependencies>
+      <dependency>
+          <groupId>kruskal</groupId>
+          <artifactId>kruskal</artifactId>
+          <version>0.1.0</version>
+      </dependency>
   </dependencies>
 </project>
